Aggiunta lista argomenti

--- a/Nuova Pagina.html
+++ b/Nuova Pagina.html
@@ -9,7 +9,23 @@
     <p>Ha sede nella città di Milano, nei due plessi Bovisa e Città Studi, ed ha sedi decentrate a Como, Cremona, Lecco, Mantova e Piacenza e in Cina
     </p>
     <img src="Polimi.jpg" alt="">
+    <ol>Indice
+      <li>Storia</li>
+      <li>Sedi e organizzazione</li>
+      <li>Accesso ai corsi di laurea</li>
+      <li>Didattica</li>
+      <li>Ricerca</li>
+      <li>Logo</li>
+      <li>Il rettore nucleare</li>
+      <li>Personalità</li>
+      <li>Liste di Rappresentanza e Associazioni</li>
+      <li>Note</li>
+      <li>Bibliografia</li>
+      <li>Altri progetti</li>
+      <li>Collegamenti esterni</li>
+      </ol>
   </body>
+
 
 </head>
 </html>
